# ml-engineering-portfolio

./: LICENSE  README.md
.github/workflows/: traffic_analysis_ci.yaml
cloud_projects/: README.md
llm_projects/: README.md
sql_projects/: README.md
sql_projects/traffic_analysis/: .gitignore  Dockerfile  README.md  compose.yaml  install.bat  pyproject.toml
sql_projects/traffic_analysis/scripts/: run.py
sql_projects/traffic_analysis/tests/: test_main.py
sql_projects/traffic_analysis/traffic_analysis/: __init__.py  __main__.py
sql_projects/traffic_analysis/traffic_analysis/etl/: __init__.py  create_table.py
sql_projects/traffic_analysis/traffic_analysis/etl/pems/: __init__.py  download.py
sql_projects/traffic_analysis/traffic_analysis/etl/pems/_vendor/: __init__.py
sql_projects/traffic_analysis/traffic_analysis/etl/pems/_vendor/caltrans_pems/: __init__.py
sql_projects/traffic_analysis/traffic_analysis/etl/pems/_vendor/caltrans_pems/pems/: __init__.py  handler.py  settings.py
